2010-05-07  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/CollectionViewTest.cs: Fix how we handle
	  binding to properties which exist on ICollectionView so that
	  it doesn't break BindsDirectlyToSource. yada yada drt 232
	  works better. 

2010-05-07  Alan McGovern  <amcgovern@novell.com>

	* moon-unit.mdp:
	* System.Windows.Data/CollectionViewTest_IEditable.cs:
	  Implement IEditableCollectionView on StandardCollectionView
	  and add a bunch of tests covering the implementation. drt
	  232 gets even further now!

2010-05-06  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/CollectionViewTest.cs: Add tests for
	  INPC properties in the default implementation of
	  CollectionView.

2010-05-06  Sebastien Pouliot  <sebastien@ximian.com>

	* security/MiscTest.cs: Comment block as a temporary workaround
	to bug #601157 so Moonlight, with a few other fixes, can update
	to HEAD

2010-05-06  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest_CollectionView.cs: Add tests
	  to ensure we bind to the correct properties when using
	  ICollectionViews.

2010-05-05  Alan McGovern  <amcgovern@novell.com>

	* moon-unit.mdp:
	* System.Windows.Data/BindingTest_CollectionView.cs: Add tests
	  for BindingExpressions which have a CollectionViewSource as
	  their datasource.

2010-05-05  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/CollectionViewGroupTest.cs:
	* System.Windows.Data/PropertyGroupDescriptionTest.cs: Update
	  tests.

	* System.Windows.Data/CollectionViewTest.cs: Add tests to
	  confirm that the Culture object is propagated from the
	  Source to the View and used by the GroupDescriptions.

2010-05-04  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/CollectionViewTest.cs: Add tests for
	  CollectionViewSource.SortDescriptions which we now pass.

2010-05-04  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/CollectionViewSourceTest.cs: